NUCLEAR OPTION: Renamed file to app_v3.js and deleted error lines

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js"></script>
     <script src="https://unpkg.com/vue-the-mask@0.11.1/dist/vue-the-mask.js"></script>
     <script src="products_final.js?v=2045"></script>
-    <script src="app_final.js?v=2045"></script>
+    <script src="app_v3.js"></script>
     <script src="card_vue.js?v=2045" defer></script>
 </head>
 
